--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Welcome to My Personal Website</h1>
     </header>
     <main>
+        <a href="https://example.com" target="_blank">打开我的 App</a>
         <p>This is a basic personal website created with HTML, CSS, and JavaScript.</p>
     </main>
     <footer>
