--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to My Personal Website</h1>
     </header>
     <main>
-        <a href="zenbowl-timer.vercel.app" target="_blank">Zenbowl Timer</a>
+        <a href="https://zenbowl-timer.vercel.app/" target="_blank">Zenbowl Timer</a>
         <p>This is a basic personal website created with HTML, CSS, and JavaScript.</p>
     </main>
     <footer>
